--- a/index.css
+++ b/index.css
@@ -62,17 +62,6 @@ h3 {
     transform: translate(-50%, -50%);
 }
 
-#top_text {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-}
-
-#bottom_text {
-    position: absolute;
-    top: 85%;
-    left: 50%;
-}
 
 .white {
     color: white;
@@ -106,21 +95,46 @@ h3 {
     }
 }
 
- canvas {
-     border: 1px solid black;
-     /* height: 441px; */
-     /* width: 321px; */
-     background-color: blanchedalmond;
-     object-fit: contain;
- }
+#canvasContainer {
+    width: 320;
+    height: 440;
+    position: relative;
+}
+
+canvas {
+    border: 1px solid black;
+    background-color: blanchedalmond;
+    object-fit: contain;
+}
+
+#canvasTopText {
+    position: relative;
+    border: transparent;
+    background-color: transparent;
+    left: -350px;
+    top: -400px;
+    font-size: 22px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
 /* .bottom-section {
     clear: both;
 }
 
- footer.branding {
-     border-top: 2px solid #ccc;
-     margin-top: 20px;
-     padding-top: 20px;
- } */
-  
+footer.branding {
+    border-top: 2px solid #ccc;
+    margin-top: 20px;
+    padding-top: 20px;
+} */
+
+/* #top_text {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+}
+
+#bottom_text {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+} */
